# eleven-audiobooks

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.txt  audio_generator.py  batch_text_optimizer.py  batch_text_reader.py  batch_text_writer.py  docker-compose.yml  main.py  pdf_processor.py  pipeline_manager.py  pipeline_state.py  pyproject.toml  requirements-dev.txt  setup.py  split_markdown.py  storage_engine.py  test_audio_generator.py  test_batch_text_optimizer.py  test_main.py  translation_pipeline.py
.cursor/rules/: python-mcp-server.rules.mdc  react-mcp-frontend.rules.mdc  test-results.md  test-results.mdc
.cursor/rules/integration/: mcp-integration-rules.mdc
.cursor/rules/mcp-examples/: mcp-integration-rules.mdc
.cursor/rules/resources/: mcp-resource-rules.mdc
.cursor/rules/tools/: mcp-tool-rules.mdc
.github/workflows/: publish.yml  test.yml
data/: examples.yaml
docs/: architecture.md
docs/diagrams/: component_interaction.mmd  data_flow.mmd  system_architecture.mmd
eleven_audiobooks/: __init__.py  audio_generator.py  batch_text_optimizer.py  main.py  pdf_processor.py  pipeline_manager.py  pipeline_state.py  storage_engine.py  translation_pipeline.py
scripts/: benchmark.py  check_dependencies.py  generate_coverage.py  generate_docs.py  generate_test_data.py  run_integration_tests.py
tests/: conftest.py  test_audio_generator.py  test_batch_text_optimizer.py  test_batch_text_reader.py  test_batch_text_writer.py  test_main.py  test_pdf_processor.py  test_pipeline_manager.py  test_pipeline_state.py
